--- a/html/testJs/密码强度.html
+++ b/html/testJs/密码强度.html
@@ -3,7 +3,7 @@
 <head>
     <title>JS判断密码强度</title>
     <meta charset="utf-8"/>
-    <script type="text/javascript" src="../js/lib/jquery/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="../../js/lib/jquery/jquery-1.11.1.js"></script>
     <script language=javascript>
         $(document).ready(function(){
             var href = 'http://192.168.115.17:44080/mcs-web/static/business/supplier/enter/register.html?check=false&email=abc@qq.com';
