--- a/html/testJs/闭包.html
+++ b/html/testJs/闭包.html
@@ -10,11 +10,10 @@
         function init(){
             var pAry = document.getElementsByTagName("p");
             for(var i=0; i<pAry.length; i++){
-
                 //p标签的点击事件
-                /*pAry[i].onclick = function(){
+                pAry[i].onclick = function(){
                     alert(i);//全都是5,因为i是外部变量，一直在跳
-                }*/
+                }
 
                 //闭包1
                 (function(_i){
@@ -29,6 +28,19 @@
 
             }
         }
+
+        function foo(x){
+            var temp = 1;
+            return function (y){
+                console.log(temp);
+                alert(x + y + (++temp));
+            }
+        }
+        var fun = foo(2);
+        fun(10);
+        fun(10);
+        fun(10);
+        fun(10);
     </script>
 </head>
 <body onload="init()">
