--- a/angular_study/指令_绑定集合.html
+++ b/angular_study/指令_绑定集合.html
@@ -21,6 +21,7 @@
     </script>
 </head>
 <body ng-controller="myCtrl">
+<input type="text" ng-model="title">
 <div my-directive my-func="myFunc()" title="title" info="someString"></div>
 </body>
 </html>
