提交本地代码

--- a/javascript/算法/main.html
+++ b/javascript/算法/main.html
@@ -9,5 +9,6 @@
 </body>
 <!--<script src="去重.js"></script>-->
 <!--<script src="插入排序.js"></script>-->
-<script src="二分插入排序.js"></script>
+<!--<script src="二分插入排序.js"></script>-->
+<script src="冒泡排序.js"></script>
 </html>
