--- a/javascript/原生Js/stringfy.html
+++ b/javascript/原生Js/stringfy.html
@@ -8,11 +8,21 @@
         console.log(typeof JSON.stringify("a"));
         console.log(JSON.stringify("a") == "a");
         console.log(JSON.stringify("a") == "\"a\"");
+        console.log(new String(JSON.stringify("a")));
         console.log(new String(JSON.stringify("a"))instanceof String);
         console.log(new String(JSON.stringify("a"))['1'] == "a");
         console.log(new String("a"));
         console.log(JSON.stringify("a") instanceof String);
+        console.log(JSON.stringify("a") instanceof Object);
 
+        console.log(JSON.stringify('a'));
+        console.log(JSON.stringify("a")== "'a'");
+        console.log(JSON.stringify("a")== '\"a\"');
+        console.log(JSON.stringify("'a'")== "\"'a'\"");
+
+        console.log(JSON.stringify({name:'tom',age:18}));
+        console.log(JSON.stringify({name:'tom',age:18}) == '{"name":"tom","age":18}');
+        console.log(JSON.stringify({name:'tom',age:18}) == '\"{"name":"tom","age":18}\"');
         console.log(String.prototype.substr.toString());
     </script>
 </head>
