--- a/html/3d翻转效果.html
+++ b/html/3d翻转效果.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        .zoom{ border-radius: 5px; width: 120px; height: 80px; display: inline-block; }
+        body{ margin: 0;padding: 0;}
+        .zoom{ width: 20px; height: 10px; display: block; float: left; }
         .rotateY{animation: myfirst 3s;}
         @keyframes myfirst
         {
@@ -12,32 +13,43 @@
             to {transform: rotateY(180deg);}
         }
 
-        .bc0{ background-color: navajowhite;}
-        .bc1{ background-color: yellowgreen}
-        .bc2{ background-color: slategrey}
-        .bc3{ background-color: mediumvioletred}
-        .bc4{ background-color: firebrick}
-        .bc5{ background-color: purple}
-        .bc6{ background-color: cornflowerblue}
-        .bc7{ background-color: darkseagreen}
+        .bc{ background-color: cornflowerblue;}
+        /*.bc0{ background-color: #BCC9E3;}
+        .bc1{ background-color: #A5BAE6}
+        .bc2{ background-color: #7788BF}
+        .bc3{ background-color: #3C69C9}
+        .bc4{ background-color: #4C95D9}
+        .bc5{ background-color: #0039B3}
+        .bc6{ background-color: #1152BF}
+        .bc7{ background-color: #073B6B}*/
+        .bc0{ background-color: #BCC9E3;}
+        .bc1{ background-color: #A5BAE6}
+        .bc2{ background-color: #7788BF}
+        .bc3{ background-color: #3C69C9}
+        .bc4{ background-color: #3C69C9}
+        .bc5{ background-color: #7788BF}
+        .bc6{ background-color: #A5BAE6}
+        .bc7{ background-color: #BCC9E3}
     </style>
 </head>
 <body>
     <!--<span class="zoom bc1"></span>-->
 </body>
 <script>
-    for( var i=0; i<100; i++){
+    for( var i=0; i<3000; i++){
         var zoom = document.createElement('span');
         var className = "zoom bc"+i%8;
+//        var className = "zoom bc";
         zoom.className = className;
         document.body.appendChild(zoom);
     }
-    document.querySelector('.zoom').addEventListener('mouseover',function(e){
-        console.log(e);
-        var className = e.target.className;
-        if(className.indexOf('rotateY') == -1){
-            className  += " rotateY";
-            e.target.className = className;
+    document.addEventListener('mouseover',function(e){
+        if(e.target.className.indexOf('zoom')>-1){
+            var className = e.target.className;
+            if(className.indexOf('rotateY') == -1){
+                className  += " rotateY";
+                e.target.className = className;
+            }
         }
     });
 </script>
