更新提交本地资源

--- a/html/限制输入数字.html
+++ b/html/限制输入数字.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
 </head>
-<script type="text/javascript" src="jQuery/jquery-1.10.1.min.js"></script>
+<script type="text/javascript" src="./../js/lib/jquery/jquery-1.10.1.min.js"></script>
 
 <body>
 <p>请输入数字：</p><input name="" class="test" type="text" />
