--- a/javascript/算法/main.html
+++ b/javascript/算法/main.html
@@ -8,6 +8,6 @@
 </body>
 <!--<script src="去重.js"></script>-->
 <!--<script src="插入排序.js"></script>-->
-<!--<script src="二分插入排序.js"></script>-->
-<script src="冒泡排序.js"></script>
+<script src="二分插入排序.js"></script>
+<!--<script src="冒泡排序.js"></script>-->
 </html>
