--- a/rxjs/filter/pluck_pairwise.html
+++ b/rxjs/filter/pluck_pairwise.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>takeUntil</title>
+  <title>pluck&pairwise</title>
   <style>
     .box{
       background: greenyellow;
@@ -13,21 +13,14 @@
     }
   </style>
   <script src="https://cdn.bootcss.com/rxjs/6.0.0-alpha.3/Rx.min.js"></script>
-  <script>
-  </script>
 </head>
 <body>
-  <div class="box"></div>
+  <div class="box"><span>去北京</span></div>
   <script>
     const box = document.querySelector('.box');
-    let click$ = Rx.Observable.fromEvent(box, 'click');
-    let interval$ = Rx.Observable.interval(1000);
-    // interval$.take(10).subscribe((e)=>{console.log(e)});
-    interval$.takeUntil(click$).subscribe({
-      next: (y)=> console.log(y),
-      error: err => console.log(err),
-      complete: () => console.log('complete')
-    });
+    let foo = Rx.Observable.fromEvent(box, 'click');
+    // foo.pluck('target', 'tagName').subscribe((e)=>{console.log(e)});
+    foo.pairwise().subscribe((e)=>{console.log(e)});
   </script>
 </body>
 </html>
