--- a/rxjs/init.html
+++ b/rxjs/init.html
@@ -15,11 +15,16 @@
         console.log("hello")
         // observer.next表示一个返回值,当然可以多次调;
         // 每次调用后会将next里面的值返回给 foo.subscribe里面的回掉,执行完后再返回
-        observer.next(42)
+        observer.next(42);
+        observer.next(31)
     });
     //foo.subscribe调用方法相当与foo(); 为了通过里面的回掉函数来获取值;
     foo.subscribe(x => console.log(x))
-    foo.subscribe(y => console.log(y))
+    foo.subscribe({
+      next: (y)=> console.log(y),
+      error: err => console.log(err),
+      complete: () => console.log('complete')
+    });
   </script>
 </head>
 <body>
