--- a/算法与数据结构/选择排序SectionSort.html
+++ b/算法与数据结构/选择排序SectionSort.html
@@ -26,7 +26,7 @@
 
         let arr31 = ['D','F','A','E','C','B'];
         console.log(arr31);
-        let arr32 = SortTestHelper.testSort(arr31, SectionSort)
+        let arr32 = SortTestHelper.testSort(arr31, SectionSort, JSON.stringify)
         console.log(arr32);
         console.log('\n');
 
