快速排序的优化

--- a/算法与数据结构/test.html
+++ b/算法与数据结构/test.html
@@ -9,7 +9,7 @@
     <script src="./helper.js"></script>
     <script src="./sort.js"></script>
     <script>
-        let n = 1000000;
+        let n = 100;
         // 在近乎有序的随机数组中，插入排序的效率远远高于选择排序
         // let arrA = SortTestHelper.generateNearlyOrderArr(n, 10);
         let arrA = SortTestHelper.generateRandamArray(n, 0, n);
