--- a/rxjs/create/fromEventPattern.html
+++ b/rxjs/create/fromEventPattern.html
@@ -19,10 +19,12 @@
   <script>
     const box = document.querySelector('.box');
     function addClickHandler(handler) {
+      console.log('订阅');
       box.addEventListener('click', handler);
     }
-
+    
     function removeClickHandler(handler) {
+      console.log('取消订阅');
       box.removeEventListener('click', handler);
     }
 
@@ -30,10 +32,14 @@
       addClickHandler,
       removeClickHandler
     );
+    let counts = 0;
     var subscribion = clicks.subscribe(x => {
       console.log(x)
-      subscribion.unsubscribe();
+      counts++;
+      console.log('点击第'+ counts + '次');
+      if (counts>3) subscribion.unsubscribe();
     });
+    // addHandler当输出 Observable 被订阅的时候调用, removeHandler 方法在取消订阅的时候被调用
   </script>
 </body>
 </html>
