--- a/rxjs/create/from.html
+++ b/rxjs/create/from.html
@@ -9,9 +9,10 @@
   <script>
     let nums = [1, 2, 3];
     var numbers$ = Rx.Observable.from(nums);
-    numbers$.subscribe(x => console.log(x));
+    numbers$.subscribe(x => console.log(x));  // 1 2 3
     nums.push(4);
     nums.push(5);
+    numbers$.subscribe(x => console.log(x)); // 1 2 3 4 5
   </script>
 </head>
 <body>
