--- a/rxjs/combination/merge.html
+++ b/rxjs/combination/merge.html
@@ -8,9 +8,15 @@
   <script src="https://cdn.bootcss.com/rxjs/6.0.0-alpha.3/Rx.min.js"></script>
   <script>
     var interval = Rx.Observable.interval(1000);
+    // var interval = Rx.Observable.fromEvent(document, 'mouseover');
     var click$ = Rx.Observable.fromEvent(document, 'click');
     var result = click$.merge(interval);
-    result.subscribe(x => console.log(x));
+    // result.subscribe(x => console.log(x));
+
+    var of1 = Rx.Observable.of(9,8,7,6,5);
+    var of2 = Rx.Observable.of(0,1,2,3,4);
+    var result2 = of1.merge(of2);
+    result2.subscribe(x => console.log(x));
   </script>
 </head>
 <body>
