--- a/rxjs/combination/高阶.1.html
+++ b/rxjs/combination/高阶.1.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>throttleTime</title>
+  <title>高阶-combineAll</title>
   <script src="https://cdn.bootcss.com/rxjs/6.0.0-alpha.3/Rx.min.js"></script>
   <script>
-    // 限制上游数据，将每个duration时间范围内的第一个数据传到下游
-    let foo$ = Rx.Observable.fromEvent(document, 'click');
-    foo$.throttleTime(2000).subscribe(
+    const ho$ = Rx.Observable.interval(1000)
+    .take(2)
+    .map(x => Rx.Observable.interval(1500).map(y => x+':'+y).take(2));
+    const concated$ = ho$.combineAll().subscribe(
       console.log,
       null,
       () => console.log('complete')
-    );
+    );;
   </script>
 </head>
 <body>
