--- a/rxjs/create/never.html
+++ b/rxjs/create/never.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>throttleTime</title>
+  <title>never</title>
   <script src="https://cdn.bootcss.com/rxjs/6.0.0-alpha.3/Rx.min.js"></script>
   <script>
-    // 限制上游数据，将每个duration时间范围内的第一个数据传到下游
-    let foo$ = Rx.Observable.fromEvent(document, 'click');
-    foo$.throttleTime(2000).subscribe(
+    var never = Rx.Observable.never().startWith(7);;
+    never.subscribe(
       console.log,
       null,
       () => console.log('complete')
