--- a/rxjs/combination/combineLatest.html
+++ b/rxjs/combination/combineLatest.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>throttleTime</title>
+  <title>withLatestFrom</title>
   <script src="https://cdn.bootcss.com/rxjs/6.0.0-alpha.3/Rx.min.js"></script>
   <script>
-    // 限制上游数据，将每个duration时间范围内的第一个数据传到下游
-    let foo$ = Rx.Observable.fromEvent(document, 'click');
-    foo$.throttleTime(2000).subscribe(
+    // 多重依赖问题
+    const original$ = Observable.timer(0, 1000);
+    const source1$ = original$.map(x => x+'a');
+    const source2$ = original$.map(x => x+'b');
+    const result$ = source1$.combineLatest(source2$);
+    result$.subscribe(
       console.log,
       null,
       () => console.log('complete')
