--- a/rxjs/combination/zip缓存窗口.html
+++ b/rxjs/combination/zip缓存窗口.html
@@ -7,10 +7,13 @@
   <title>zip缓存窗口</title>
   <script src="https://cdn.bootcss.com/rxjs/6.0.0-alpha.3/Rx.min.js"></script>
   <script>
-    let foo1$ = Rx.Observable.timer(1000, 2000);
-    let foo2$ = Rx.Observable.timer(0, 100).map(val=>'a' + val);
-    let foo$ = foo1$.zip(foo2$.bufferTime(500));
-    foo$.subscribe(x => console.log(x));  // 多余的没有组对不发出
+    let foo1$ = Rx.Observable.interval(2000);
+    let foo2$ = Rx.Observable.interval(100).map(val=>'a' + val);
+    let foo$ = foo1$.zip(foo2$.bufferTime(1000)).map(arr=>arr[1]);
+    foo$.subscribe(x => {
+      // x 是一个数组，表示1000ms内缓存的foo2$生成数据
+      console.log(x);
+    });
   </script>
 </head>
 <body>
